--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js",
+    "test": "jest --coverage",
+    "testWatch": "jest --watchAll"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^4.11.0",
+    "hapi": "16",
     "jest": "^21.2.1"
+  },
+  "dependencies": {
+    "nodemon": "^1.12.1"
   }
 }
