--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "start" : "yarn nodemon index.js",
+    "testwatch" : "jest --watchAll",
+    "testcoverage" :"jest --coverage"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^21.2.1"
+  },
+  "dependencies": {
+    "hapi": "16",
+    "nodemon": "^1.12.1"
   }
 }
