--- a/package.json
+++ b/package.json
@@ -1,14 +1,24 @@
 {
-  "name": "data-transform",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "jest": "^21.2.1"
-  }
+    "name": "data-transform",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "nodemon index.js",
+        "test": "jest --coverage",
+        "test:watch": "jest --watchAll"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "jest": "^21.2.1",
+        "hapi": "^16.6.2",
+        "nodemon": "^1.12.1"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "*.js",
+            "!server.js"
+        ]
+    }
 }
