--- a/.eslintrc
+++ b/.eslintrc
@@ -38,5 +38,10 @@
     "object-curly-spacing": 2,
     "quotes": ["error", "single"],
     "no-console": 2
+  },
+  "globals": {
+    "jest": true,
+    "test": true,
+    "expect": true
   }
 }
